package Entidades.Elementos;

import Entidades.Jugadores.Gladiador;

public interface Elemento {
    public void accionar(Gladiador gladiador);
}
