package Entidades.Elementos;

public interface Premio {
}
