package modelo.jugadores;
import modelo.AlgoRoma;
import modelo.elementos.*;
import modelo.energia.Energia;
import modelo.premios.Equipo;
import modelo.premios.EquipoBase;
import modelo.premios.JerarquiaEquipos;

public class Gladiador extends Jugador {
    private Seniority seniority;
    private Equipo equipamiento;

    public  Gladiador (String nombre) {
        this.nombre = nombre;
        this.energia = new Energia();
        this.seniority = new Novato();
        this.turno = new Turno();
        this.equipamiento = new EquipoBase();
        this.dispositivoDeAzar = new Dado();
    }

    private void ascenderSeniority () {
        this.seniority =  this.seniority.ascenderSeniority(this.turno);
    }


    @Override
    public void moverse() {

        if (this.turno.estaHabilitado() && this.energia.tengoEnergia()) {
            this.mapa.moverJugador(this.casillero,this);
        }
        if (!this.energia.tengoEnergia()) {
            this.energia.afectarEnergia(new Energia(5));
            this.turno.deshabilitar();
        }
    }

    public void obtenerElementos () {
        this.casillero.entregarElementos(this);
    }

    @Override
    public void perderTurnos (Turno turnos) {
        if (this.turno.estaHabilitado()) {
            this.turno.perderTurnos(turnos);
        }
    }

    @Override
    public void finalizarTurno (AlgoRoma algoRoma) {
        this.turno.finalizar();
        this.seniority.aumentarEnergia(this.energia);
        this.ascenderSeniority();
        algoRoma.turnoFinalizado(this);
    }



    @Override
    public void recibirDanio(Energia energia) {
        if (this.turno.estaHabilitado()) {
            this.energia.afectarEnergia(energia);
        }
    }

    @Override
    public void defenderse() {
        if (this.turno.estaHabilitado()) {
            this.equipamiento.recibirDanio(this.energia);
        }
    }
    @Override
    public void equipar () {
        this.equipamiento = this.equipamiento.mejorar();
    }

    @Override
    public boolean esEquipoMaximo() {
        return !this.equipamiento.sePuedeMejorar();
    }

    @Override
    public boolean compararEquipo(JerarquiaEquipos equipo) {
        return this.equipamiento.compararEquipo(equipo);
    }

    @Override
    public String miDescripcion() {
        String nombre = this.nombre;
        String seniority = this.seniority.descripcion();
        String equipo = this.equipamiento.descripcion();
        String energia = this.energia.descripcion();

        String descripcion = "Nombre: "+nombre + " Seniority: " + seniority + " Equipamiento: " + equipo + " Energia: " + energia;
        return descripcion;
    }
}
