package modelo.obstaculos;

import modelo.Interactuable;

public abstract class Obstaculo implements Interactuable {
}